--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
   <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
+  <script>
+    $(".dropdown-menu li a").click(function () {
+      alert(test)
+      var selText = $(this).text();
+      $(this).parents('.btn-group').find('.dropdown-toggle').html(selText + ' <span class="caret"></span>');
+    });
+  </script>
 </head>
 
 <body>
@@ -142,6 +149,64 @@
         </div>
       </section>
       <section>
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-lg-6">
+              <div class="pie-chart chart block">
+                <div class="title">
+                  <strong>Currently Mining</strong>
+                </div>
+                <div class="pie-chart chart margin-bottom-sm">
+                  <canvas id="pieChartCustom1"></canvas>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6">
+              <div class="block">
+                <div class="title">
+                  <strong>Change Coins</strong>
+                </div>
+                <div class="form-group row">
+                  <!-- <label class="col-sm-3 form-control-label">Select Coin to Mine</label> -->
+                  <div class="col-sm-9">
+                    <div class="input-group">
+                      <div class="input-group-prepend">
+                        <button data-toggle="dropdown" type="button" id=options class="btn btn-outline-secondary dropdown-toggle"> Select a coin to mine
+                          <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu">
+                          <li>
+                            <a class="dropdown-item" href="#">Ethereum</a>
+                          </li>
+                          <li>
+                            <a class="dropdown-item" href="#">Ether Classic</a>
+                          </li>
+                          <li>
+                            <a class="dropdown-item" href="#">Pirl</a>
+                          </li>
+                          <li>
+                            <a class="dropdown-item" href="#">Music</a>
+                          </li>
+                          <li>
+                            <a class="dropdown-item" href="#">Ellaism</a>
+                          </li>
+                          <li>
+                            <a class="dropdown-item" href="#">Expanse</a>
+                          </li>
+                          <li>
+                            <a class="dropdown-item" href="#">Ubiq</a>
+                          </li>
+                        </ul>
+                        <div class="col-sm-1"></div>
+                        <button type="button" class="btn btn-primary">Save changes</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+      </section>
+      <section>
         <div class="col-lg-12">
           <div class="block">
             <div class="title">
@@ -190,20 +255,21 @@
                 <strong>Miner Details</strong>
               </div>
               <div class="table-responsive">
-                <table class="table table-striped table-sm" data-toggle="table" data-url="http://cryqua.ethosdistro.com/?json=yes" data-height="299"></table>>
-                <thead>
-                  <tr>
-                    <th data-field="rigs">Miner</th>
-                  </tr>
-                </thead>
+                <table class="table table-hover" id="table" data-toggle="table" data-url="http://cryqua.ethosdistro.com/?json=yes">
+                  <thead>
+                    <tr>
+                      <th data-field="total_hash">total_hash</th>
+
+                    </tr>
+                  </thead>
                 </table>
               </div>
             </div>
           </div>
+          </div>
+          </div>
+        </section>
     </div>
-  </div>
-  </section>
-  </div>
   </div>
   </section>
   <footer class="footer">
@@ -228,6 +294,14 @@
   <script src="js/front.js"></script>
   <script src="vendor/bootstrap/js/bootstrap-table.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap-table-zh-CN.min.js"></script>
+  <script src="js/charts-custom.js"></script>
+  <script>
+    $(document).ready(function () {
+      $(".dropdown-menu li a").click(function () {
+        $("#options").text($(this).text());
+      });
+    });
+  </script>
 </body>
 
 </html>
