--- a/index.html
+++ b/index.html
@@ -160,7 +160,6 @@
                   <strong>Change Coins</strong>
                 </div>
                 <div class="form-group row">
-                  <!-- <label class="col-sm-3 form-control-label">Select Coin to Mine</label> -->
                   <div class="col-sm-9">
                     <div class="input-group">
                       <div class="input-group-prepend">
@@ -168,6 +167,10 @@
                           <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu">
+                          <li>
+                            <a class="dropdown-item">Auto Switching</a>
+                          </li>
+                          <div class="dropdown-divider"></div>
                           <li>
                             <a class="dropdown-item">Ethereum</a>
                           </li>
@@ -199,6 +202,26 @@
               </div>
             </div>
       </section>
+      <!-- <section>
+        <div class="col-lg-6">
+          <div class="block">
+            <div class="title">
+              <strong>Estimated Earnings</strong>
+            </div>
+            <div class="table-responsive">
+              <table class="table table-striped table-hover">
+                  <thead>
+                      <tr>
+                        <th>Period</th>
+                        <th>USD</th>
+                        <th>BTC</th>
+                      </tr>
+                    </thead>
+              </table>
+            </div>
+          </div>
+        </div>
+      </section> -->
       <section>
         <div class="col-lg-12">
           <div class="block">
@@ -206,14 +229,14 @@
               <strong>Miner Details</strong>
             </div>
             <div class="table-responsive">
-              <table class="table table-striped table-sm" data-sort-name="ip" data-sort-order="desc">
+              <table class="table table-striped table-hover table-sm">
                 <thead>
                   <tr>
                     <th>Name</th>
-                    <th>Location</th>
-                    <th data-field="ip" data-sortable="true">IP Address</th>
+                    <th>IP Address</th>
                     <th>GPUs</th>
                     <th>Total Hashrate</th>
+                    <th>Mining</th>
                   </tr>
                 </thead>
                 <tbody id="tableData"></tbody>
@@ -261,12 +284,37 @@
 
           var k = '<tbody>'
           for (i = 0; i < obj.length; i++) {
+            switch (obj[i].pool) {
+              case 'us1.ethermine.org:4444':
+                coin = 'ETH'
+                break;
+              case 'us1-etc.ethermine.org:4444':
+                coin = 'ETC'
+                break;
+              case 'us-east.pirlpool.eu:8004':
+                coin = 'PIRL'
+                break;
+              case 'musicoin.nomnom.technology:4444':
+                coin = 'MUSIC'
+                break;
+              case 'lb.geo.ellapool.eu:8004':
+                coin = 'ELLA'
+                break;
+              case 'us.expmine.pro:9009':
+                coin = 'EXP'
+                break;
+              case 'us.ubiqpool.io:8008':
+                coin = 'UBQ'
+                break;
+              default:
+                coin = 'Unknown'
+            }
             k += '<tr>';
-            k += '<td>' + obj[i].rigname + '</td>';
             k += '<td>' + obj[i].rack_loc + '</td>';
             k += '<td>' + obj[i].ip + '</td>';
             k += '<td>' + obj[i].gpus + '</td>';
             k += '<td>' + obj[i].hash + '</td>';
+            k += '<td>' + coin + '</td>';
             k += '</tr>';
           }
           k += '</tbody>';
