--- a/index.html
+++ b/index.html
@@ -294,79 +294,8 @@
   <script src="vendor/bootstrap/js/bootstrap-table.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap-table-zh-CN.min.js"></script>
   <script src="js/charts-custom.js"></script>
-  <script>
-    $(document).ready(function () {
-      $(".dropdown-menu li a").click(function () {
-        $("#options").text($(this).text());
-      });
+  <script src="js/index.js"></script>
 
-
-    });
-
-    var text = $.getJSON('http://34.224.90.223/panel.json', function () {
-      var preobj = JSON.parse(text.responseText);
-      var obj = preobj.rigs;
-      //console.log(obj);
-
-      var k = '<tbody>'
-      for (i = 0; i < obj.length; i++) {
-        switch (obj[i].pool) {
-          case 'us1.ethermine.org:4444':
-            coin = 'ETH'
-            break;
-          case 'us1-etc.ethermine.org:4444':
-            coin = 'ETC'
-            break;
-          case 'us-east.pirlpool.eu:8004':
-            coin = 'PIRL'
-            break;
-          case 'musicoin.nomnom.technology:4444':
-            coin = 'MUSIC'
-            break;
-          case 'lb.geo.ellapool.eu:8004':
-            coin = 'ELLA'
-            break;
-          case 'us.expmine.pro:9009':
-            coin = 'EXP'
-            break;
-          case 'us.ubiqpool.io:8008':
-            coin = 'UBQ'
-            break;
-          default:
-            coin = 'Unknown'
-        }
-        k += '<tr>';
-        k += '<td>' + obj[i].rack_loc + '</td>';
-        k += '<td>' + obj[i].ip + '</td>';
-        k += '<td>' + obj[i].gpus + '</td>';
-        k += '<td>' + obj[i].hash + '</td>';
-        k += '<td>' + coin + '</td>';
-        k += '</tr>';
-      }
-      k += '</tbody>';
-      document.getElementById('tableData').innerHTML = k;
-    });
-
-    $.getJSON("http://cryqua.ethosdistro.com/?json=yes", callbackFuncWithData);
-
-    function callbackFuncWithData(data) {
-      var hashrate = data.total_hash;
-      document.getElementById("active-miners").innerHTML = data.alive_rigs + "/" + data.total_rigs;
-      document.getElementById("active-gpus").innerHTML = data.alive_gpus;
-      document.getElementById("total-hash").innerHTML = Math.round(hashrate);
-      document.getElementById("avg-gpu-temp").innerHTML = Math.round(data.avg_temp) + "c";
-
-      // var customUrl = "https://whattomine.com/coins.json?utf8=%E2%9C%93&adapt_q_280x=0&adapt_q_380=0&adapt_q_fury=0&adapt_q_470=0&adapt_q_480=0&adapt_q_570=0&adapt_q_580=0&adapt_q_vega56=0&adapt_q_vega64=0&adapt_q_750Ti=0&adapt_q_1050Ti=0&adapt_q_10606=0&adapt_q_1070=0&adapt_q_1070Ti=0&adapt_q_1080=0&adapt_q_1080Ti=0&eth=true&factor%5Beth_hr%5D=" + hashrate + "&factor%5Beth_p%5D=0.0&grof=true&factor%5Bgro_hr%5D=0.0&factor%5Bgro_p%5D=0.0&x11gf=true&factor%5Bx11g_hr%5D=0.0&factor%5Bx11g_p%5D=0.0&cn=true&factor%5Bcn_hr%5D=0.0&factor%5Bcn_p%5D=0.0&eq=true&factor%5Beq_hr%5D=0.0&factor%5Beq_p%5D=0.0&lre=true&factor%5Blrev2_hr%5D=0.0&factor%5Blrev2_p%5D=0.0&ns=true&factor%5Bns_hr%5D=0.0&factor%5Bns_p%5D=0.0&lbry=true&factor%5Blbry_hr%5D=0.0&factor%5Blbry_p%5D=0.0&bk2bf=true&factor%5Bbk2b_hr%5D=0.0&factor%5Bbk2b_p%5D=0.0&bk14=true&factor%5Bbk14_hr%5D=0.0&factor%5Bbk14_p%5D=0.0&pas=true&factor%5Bpas_hr%5D=0.0&factor%5Bpas_p%5D=0.0&skh=true&factor%5Bskh_hr%5D=0.0&factor%5Bskh_p%5D=0.0&factor%5Bl2z_hr%5D=420.0&factor%5Bl2z_p%5D=300.0&factor%5Bcost%5D=0.1&sort=Profitability24&volume=0&revenue=24h&factor%5Bexchanges%5D%5B%5D=&factor%5Bexchanges%5D%5B%5D=abucoins&factor%5Bexchanges%5D%5B%5D=bitfinex&factor%5Bexchanges%5D%5B%5D=bittrex&factor%5Bexchanges%5D%5B%5D=bleutrade&factor%5Bexchanges%5D%5B%5D=cryptopia&factor%5Bexchanges%5D%5B%5D=hitbtc&factor%5Bexchanges%5D%5B%5D=poloniex&factor%5Bexchanges%5D%5B%5D=yobit&dataset=&commit=Calculate"
-      // var json = $.getJSON(customUrl);
-      // console.log(json)
-    }
-
-    $(function () {
-      $('[data-toggle="tooltip"]').tooltip()
-    })
-
-
-  </script>
 </body>
 
 </html>
