changing coins functionality, local node server for now

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
+  <link rel="stylesheet" href="css/toastr.min.css">
   <style>
     .btn.btn-outline-secondary.dropdown-toggle {
       min-width: 185px !important;
@@ -240,7 +241,7 @@
                       </li>
                     </ul>
                     <div class="col-sm-1"></div>
-                    <button type="button" class="btn btn-primary" data-toggle="tooltip" data-placement="top" title="Coming soon">Save changes</button>
+                    <button type="button" id="change_coin" class="btn btn-primary" data-toggle="tooltip" data-placement="top">Save changes</button>
                   </div>
                 </div>
               </div>
@@ -295,6 +296,7 @@
   <script src="vendor/bootstrap/js/bootstrap-table-zh-CN.min.js"></script>
   <script src="js/charts-custom.js"></script>
   <script src="js/index.js"></script>
+  <script src="js/toastr.min.js"></script>
 
 </body>
 
