better change coin validation

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                     </button>
                     <ul class="dropdown-menu">
                       <li>
-                        <a class="dropdown-item">Auto Switching</a>
+                        <a class="dropdown-item">Most Profitable</a>
                       </li>
                       <div class="dropdown-divider"></div>
                       <li>
@@ -290,7 +290,6 @@
   <script src="vendor/jquery.cookie/jquery.cookie.js"> </script>
   <script src="vendor/chart.js/Chart.min.js"></script>
   <script src="vendor/jquery-validation/jquery.validate.min.js"></script>
-  <script src="js/charts-home.js"></script>
   <script src="js/front.js"></script>
   <script src="vendor/bootstrap/js/bootstrap-table.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap-table-zh-CN.min.js"></script>
