added global vars file

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             <div class="col-lg-6">
               <div class="pie-chart chart block">
                 <div class="title">
-                  <strong>Balances (USD)</strong>
+                  <strong>Wallet Balances</strong>
                 </div>
                 <div class="pie-chart chart margin-bottom-sm">
                   <canvas id="pieChartCustom2"></canvas>
@@ -210,7 +210,8 @@
               <div class="col-sm-9">
                 <div class="input-group">
                   <div class="input-group-prepend">
-                    <button data-toggle="dropdown" type="button" id=options class="btn btn-outline-secondary dropdown-toggle"> Select a coin to mine
+                    <button data-toggle="dropdown" type="button" id=options class="btn btn-outline-secondary dropdown-toggle"> Select
+                      a coin to mine
                       <span class="caret"></span>
                     </button>
                     <ul class="dropdown-menu">
@@ -241,7 +242,8 @@
                       </li>
                     </ul>
                     <div class="col-sm-1"></div>
-                    <button type="button" id="change_coin" class="btn btn-primary" data-toggle="tooltip" data-placement="top">Save changes</button>
+                    <button type="button" id="change_coin" class="btn btn-primary" data-toggle="tooltip" data-placement="top">Save
+                      changes</button>
                   </div>
                 </div>
               </div>
@@ -284,6 +286,7 @@
     </div>
   </div>
   <!-- JavaScript files-->
+  <script src="js/globalvars.js"></script>
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/popper.js/umd/popper.min.js"> </script>
   <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
@@ -296,6 +299,7 @@
   <script src="js/charts-custom.js"></script>
   <script src="js/index.js"></script>
   <script src="js/toastr.min.js"></script>
+  <script src="js/jsonhelper.js"></script>
 
 </body>
 
