--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                   <strong>Currently Mining</strong>
                 </div>
                 <div class="pie-chart chart margin-bottom-sm">
-                  <canvas id="pieChartCustom1"></canvas>
+                  <canvas id="pieCurrMining"></canvas>
                 </div>
               </div>
             </div>
@@ -166,7 +166,7 @@
                   <strong>Wallet Balances</strong>
                 </div>
                 <div class="pie-chart chart margin-bottom-sm">
-                  <canvas id="pieChartCustom2"></canvas>
+                  <canvas id="pieBalances"></canvas>
                 </div>
               </div>
             </div>
