--- a/index.html
+++ b/index.html
@@ -255,7 +255,31 @@
         <div class="col-lg-12">
           <div class="block">
             <div class="title">
-              <strong>Miner Details</strong>
+              <strong>Problem Miners</strong><i id="badMinerTableCount"></i>
+            </div>
+            <div class="table-responsive">
+              <table class="table table-striped table-hover table-sm">
+                <thead>
+                  <tr>
+                    <th>Name</th>
+                    <th>IP Address</th>
+                    <th>GPUs</th>
+                    <th>Total Hashrate</th>
+                    <th>Mining</th>
+                    <th>Condition</th>
+                  </tr>
+                </thead>
+                <tbody id="badMinerTableData"></tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="col-lg-12">
+          <div class="block">
+            <div class="title">
+              <strong>Miners </strong><i id="tableCount"></i>
             </div>
             <div class="table-responsive">
               <table class="table table-striped table-hover table-sm">
