--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     <div class="icon">
                       <i class="icon-dashboard"></i>
                     </div>
-                    <strong>Total Hash</strong>
+                    <strong>Megahash</strong>
                   </div>
                   <div class="number dashtext-2" id="total-hash"></div>
                 </div>
@@ -173,83 +173,95 @@
           </div>
         </div>
       </section>
-      <!-- <section>
-        <div class="col-lg-6">
-          <div class="block">
-            <div class="title">
-              <strong>Estimated Earnings</strong>
-            </div>
-            <div class="table-responsive">
-              <table class="table table-striped table-hover">
-                <thead>
-                  <tr>
-                    <th>Period</th>
-                    <th>USD</th>
-                    <th>BTC</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
-          </div>
-        </div>
-      </section> -->
       <section>
-        <div class="col-lg-6">
-          <div class="block">
-            <div class="title">
-              <strong>Change Coins</strong>
-            </div>
-            <div class="form-group row">
-              <div class="col-sm-9">
-                <div class="input-group">
-                  <div class="input-group-prepend">
-                    <button data-toggle="dropdown" type="button" id=options class="btn btn-outline-secondary dropdown-toggle"> Select
-                      a coin to mine
-                      <span class="caret"></span>
-                    </button>
-                    <ul class="dropdown-menu">
-                      <li>
-                        <a class="dropdown-item">Most Profitable</a>
-                      </li>
-                      <div class="dropdown-divider"></div>
-                      <li>
-                        <a class="dropdown-item">Ethereum (ETH)</a>
-                      </li>
-                      <li>
-                        <a class="dropdown-item">Ether Classic (ETC)</a>
-                      </li>
-                      <li>
-                        <a class="dropdown-item">Pirl (PIRL)</a>
-                      </li>
-                      <li>
-                        <a class="dropdown-item">Musicoin (MUSIC)</a>
-                      </li>
-                      <li>
-                        <a class="dropdown-item">Ellaism (ELLA)</a>
-                      </li>
-                      <li>
-                        <a class="dropdown-item">Expanse (EXP)</a>
-                      </li>
-                      <li>
-                        <a class="dropdown-item">Ubiq (UBQ)</a>
-                      </li>
-                    </ul>
-                    <div class="col-sm-1"></div>
-                    <button type="button" id="change_coin" class="btn btn-primary" data-toggle="tooltip" data-placement="top">Save
-                      changes</button>
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-lg-6">
+              <div class="block">
+                <div class="title">
+                  <strong>Change Coins</strong>
+                </div>
+                <div class="form-group row">
+                  <div class="col-sm-9">
+                    <div class="input-group">
+                      <div class="input-group-prepend">
+                        <button data-toggle="dropdown" type="button" id=options class="btn btn-outline-secondary dropdown-toggle">
+                          Select
+                          a coin to mine
+                          <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu">
+                          <li>
+                            <a class="dropdown-item">Most Profitable</a>
+                          </li>
+                          <div class="dropdown-divider"></div>
+                          <li>
+                            <a class="dropdown-item">Ethereum (ETH)</a>
+                          </li>
+                          <li>
+                            <a class="dropdown-item">Ether Classic (ETC)</a>
+                          </li>
+                          <li>
+                            <a class="dropdown-item">Pirl (PIRL)</a>
+                          </li>
+                          <li>
+                            <a class="dropdown-item">Musicoin (MUSIC)</a>
+                          </li>
+                          <li>
+                            <a class="dropdown-item">Ellaism (ELLA)</a>
+                          </li>
+                          <li>
+                            <a class="dropdown-item">Expanse (EXP)</a>
+                          </li>
+                          <li>
+                            <a class="dropdown-item">Ubiq (UBQ)</a>
+                          </li>
+                        </ul>
+                        <div class="col-sm-1"></div>
+                        <button type="button" id="change_coin" class="btn btn-primary" data-toggle="tooltip"
+                          data-placement="top">Save
+                          changes</button>
+                      </div>
+                    </div>
                   </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6">
+              <div class="block">
+                <div class="title">
+                  <strong>Estimated Earnings</strong>
+                </div>
+                <div class="table-responsive">
+                  <table class="table table-striped table-hover">
+                    <thead>
+                      <tr>
+                        <th>Period</th>
+                        <th>USD</th>
+                        <th>BTC</th>
+                      </tr>
+                    </thead>
+                    <tbody id="tableDataEstimatedEarnings"></tbody>
+                  </table>
                 </div>
               </div>
             </div>
           </div>
         </div>
+      </section>
+      <section>
+        <div class="col-lg-12">
+          <div class="block">
+            <div class="title">
+              <strong>Live Feed</strong>
+            </div>
+            <iframe allowfullscreen webkitallowfullscreen mozallowfullscreen src="https://video.nest.com/embedded/live/SlzBSBZ90I"
+              frameborder="0" width="420" height="276"></iframe>
+            <iframe allowfullscreen webkitallowfullscreen mozallowfullscreen src="https://video.nest.com/embedded/live/xrdHooCbuW"
+              frameborder="0" width="420" height="276"></iframe>
+            <iframe allowfullscreen webkitallowfullscreen mozallowfullscreen src="https://video.nest.com/embedded/live/sTdTMC4ck6"
+              frameborder="0" width="420" height="276"></iframe>
+          </div>
       </section>
       <section>
         <div class="col-lg-12">
