--- a/index.html
+++ b/index.html
@@ -253,14 +253,16 @@
         <div class="col-lg-12">
           <div class="block">
             <div class="title">
-              <strong>Live Feed</strong>
+              <strong>Live Feed (CQ1)</strong>
             </div>
-            <iframe allowfullscreen webkitallowfullscreen mozallowfullscreen src="https://video.nest.com/embedded/live/SlzBSBZ90I"
-              frameborder="0" width="420" height="276"></iframe>
-            <iframe allowfullscreen webkitallowfullscreen mozallowfullscreen src="https://video.nest.com/embedded/live/xrdHooCbuW"
-              frameborder="0" width="420" height="276"></iframe>
-            <iframe allowfullscreen webkitallowfullscreen mozallowfullscreen src="https://video.nest.com/embedded/live/sTdTMC4ck6"
-              frameborder="0" width="420" height="276"></iframe>
+            <div align="center">
+              <iframe allowfullscreen webkitallowfullscreen mozallowfullscreen src="https://video.nest.com/embedded/live/ObBDeAoItr"
+                frameborder="0" width="420" height="276"></iframe>
+              <iframe allowfullscreen webkitallowfullscreen mozallowfullscreen src="https://video.nest.com/embedded/live/xrdHooCbuW"
+                frameborder="0" width="420" height="276"></iframe>
+              <iframe allowfullscreen webkitallowfullscreen mozallowfullscreen src="https://video.nest.com/embedded/live/sTdTMC4ck6"
+                frameborder="0" width="420" height="276"></iframe>
+            </div>
           </div>
       </section>
       <section>
