embedded 4th nest cam

--- a/index.html
+++ b/index.html
@@ -262,6 +262,8 @@
                 frameborder="0" width="420" height="276"></iframe>
               <iframe allowfullscreen webkitallowfullscreen mozallowfullscreen src="https://video.nest.com/embedded/live/sTdTMC4ck6"
                 frameborder="0" width="420" height="276"></iframe>
+              <iframe allowfullscreen webkitallowfullscreen mozallowfullscreen src="https://video.nest.com/embedded/live/nk8DGfuu4x"
+                frameborder="0" width="420" height="276"></iframe>
             </div>
           </div>
       </section>
