shows binance pie data and total balance

--- a/index.html
+++ b/index.html
@@ -158,16 +158,19 @@
                 <div class="pie-chart chart margin-bottom-sm">
                   <canvas id="pieCurrMining"></canvas>
                 </div>
+                <!-- Total Miners:  <strong><b id="active-miners"></b></strong> -->
+                <br>
               </div>
             </div>
             <div class="col-lg-6">
               <div class="pie-chart chart block">
                 <div class="title">
-                  <strong>Wallet Balances</strong>
+                  <strong>Wallet Balances (BTC)</strong>
                 </div>
                 <div class="pie-chart chart margin-bottom-sm">
                   <canvas id="pieBalances"></canvas>
                 </div>
+                Total USD:  <strong><b id="total-balance"></b></strong>
               </div>
             </div>
           </div>
