--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     }
     .btn-primary-outline {
       background-color: transparent;
-      color: #e95f71;
+      color: #e95f71; 
       padding: 0px 5px;
     }
     #btnBottomLeft {
@@ -295,31 +295,32 @@
       <section>
         <div class="col-lg-12">
           <div class="block">
-            <div class="title btn btn-outline-secondary" data-toggle="collapse" href="#collapseProblemMiners" role="button"
-              aria-expanded="false" aria-controls="collapseProblemMiners">
-              <h6><strong>Problem Miners</strong><i id="badMinerTableCount"></i></h6>
-            </div>
-            <div class="collapse show" id="collapseProblemMiners">
-              <div class="table-responsive">
-                <table class="table table-striped table-hover table-sm">
-                  <thead>
-                    <tr>
-                      <th>Name</th>
-                      <th>Controls</th>
-                      <th>IP Address</th>
-                      <th>GPUs</th>
-                      <th>Total Hashrate</th>
-                      <th>Mining</th>
-                      <th>Condition</th>
-                      <th>Uptime (Days)</th>
-                    </tr>
-                  </thead>
-                  <tbody id="badMinerTableData"></tbody>
-                </table>
+            <div class="title">
+              <div class="btn btn-outline-secondary" data-toggle="collapse" href="#collapseProblemMiners" role="button"
+                aria-expanded="false" aria-controls="collapseProblemMiners">
+                <h6><strong>Problem Miners</strong><i id="badMinerTableCount"></i></h6>
+              </div>
+              &nbsp<button onclick="testFunction()" class="btn btn-primary" id="">Reboot All</button>
+              <div class="collapse show" id="collapseProblemMiners">
+                <div class="table-responsive">
+                  <table class="table table-striped table-hover table-sm">
+                    <thead>
+                      <tr>
+                        <th>Name</th>
+                        <th>Controls</th>
+                        <th>IP Address</th>
+                        <th>GPUs</th>
+                        <th>Total Hashrate</th>
+                        <th>Mining</th>
+                        <th>Condition</th>
+                        <th>Uptime (Days)</th>
+                      </tr>
+                    </thead>
+                    <tbody id="badMinerTableData"></tbody>
+                  </table>
+                </div>
               </div>
             </div>
-          </div>
-        </div>
       </section>
       <section>
         <div class="col-lg-12">
@@ -339,6 +340,7 @@
                       <th>GPUs</th>
                       <th>Total Hashrate</th>
                       <th>Mining</th>
+                      <th>Uptime (Days)</th>
                     </tr>
                   </thead>
                   <tbody id="tableData"></tbody>
@@ -396,6 +398,10 @@
         document.getElementById("btnBottomLeft").style.display = "none";
       }
     }
+
+    $(document).ready(function () {
+
+    });
 
     //$('[data-toggle="tooltip"]').tooltip(); 
   </script>
