--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                 aria-expanded="false" aria-controls="collapseProblemMiners">
                 <h6><strong>Problem Miners</strong><i id="badMinerTableCount"></i></h6>
               </div>
-              &nbsp<button onclick="testFunction()" class="btn btn-primary" id="">Reboot All</button>
+              &nbsp<button onclick="testFunction()" class="btn btn-primary" id="" disabled>Reboot All</button>
               <div class="collapse show" id="collapseProblemMiners">
                 <div class="table-responsive">
                   <table class="table table-striped table-hover table-sm">
@@ -373,23 +373,40 @@
       return arr;
     }
 
+    function getSecondPart(str) {
+      return str.split('_')[1];
+    }
+
     //Control buttons in table
     var buttonClicked = null;
     var rigControlObj = [];
     function highlight(element) {
       buttonClicked = element;
-      if (buttonClicked.style.color == "black") {
-        //deselected
+      if (buttonClicked.style.color == "black") { //deselected
+        if (element.id.includes("downclock")) { //if downclock deselected, downclock the same rigs reboot button and enable it again
+          var relatedRebootId = "reboot_" + getSecondPart(element.id);
+          var relatedRebootElement = document.getElementById(relatedRebootId);
+          relatedRebootElement.style.background = "transparent";
+          relatedRebootElement.style.color = "#e95f71";
+          relatedRebootElement.disabled = false;
+        }
         buttonClicked.style.background = "transparent";
         buttonClicked.style.color = "#e95f71";
         removeA(rigControlObj, element.id);
-        //console.log(rigControlObj);
-      } else {
-        //selected
+        console.log(rigControlObj); //debug
+      } else { //selected
+        if (element.id.includes("downclock")) { //if downclock selected, select the same rigs reboot button and disables it
+          var relatedRebootId = "reboot_" + getSecondPart(element.id);
+          var relatedRebootElement = document.getElementById(relatedRebootId);
+          removeA(rigControlObj, relatedRebootId); //cleans array, downclock is already an auto reboot
+          relatedRebootElement.style.background = "#e95f71";
+          relatedRebootElement.style.color = "black";
+          relatedRebootElement.disabled = true;
+        }
         buttonClicked.style.background = "#e95f71";
         buttonClicked.style.color = "black";
         rigControlObj.push(element.id);
-        //console.log(rigControlObj);
+        console.log(rigControlObj); //debug
       }
       //Submit button following scroll at bottom right
       if (rigControlObj.length > 0) {
@@ -398,10 +415,6 @@
         document.getElementById("btnBottomLeft").style.display = "none";
       }
     }
-
-    $(document).ready(function () {
-
-    });
 
     //$('[data-toggle="tooltip"]').tooltip(); 
   </script>
@@ -421,7 +434,7 @@
   <script src="js/toastr.min.js"></script>
 
   <!-- Submit button for controls-->
-  <button onclick="testFunction()" class="btn btn-primary" id="btnBottomLeft">Submit</button>
+  <button onclick="postControlsArray()" class="btn btn-primary" id="btnBottomLeft">Submit</button>
 </body>
 
 </html>
