--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                 aria-expanded="false" aria-controls="collapseProblemMiners">
                 <h6><strong>Problem Miners</strong><i id="badMinerTableCount"></i></h6>
               </div>
-              &nbsp<button onclick="testFunction()" class="btn btn-primary" id="" disabled>Reboot All</button>
+              &nbsp<button onclick="postRebootAllProblemMiners()" class="btn btn-primary" id="" data-toggle="tooltip" data-placement="top" title="Coming Soon">Reboot All</button>
               <div class="collapse show" id="collapseProblemMiners">
                 <div class="table-responsive">
                   <table class="table table-striped table-hover table-sm">
@@ -400,7 +400,7 @@
         buttonClicked.style.background = "transparent";
         buttonClicked.style.color = "#e95f71";
         removeA(rigControlObj, element.id);
-        console.log(rigControlObj); //debug
+        //console.log(rigControlObj); //debug
       } else { //selected
         if (element.id.includes("downclock")) { //if downclock selected, select the same rigs reboot button and disables it
           var relatedRebootId = "reboot_" + getSecondPart(element.id);
@@ -413,7 +413,7 @@
         buttonClicked.style.background = "#e95f71";
         buttonClicked.style.color = "black";
         rigControlObj.push(element.id);
-        console.log(rigControlObj); //debug
+        //console.log(rigControlObj); //debug
       }
       //Submit button following scroll at bottom right
       if (rigControlObj.length > 0) {
@@ -441,7 +441,19 @@
   <script src="js/toastr.min.js"></script>
 
   <!-- Submit button for controls-->
-  <button onclick="postControlsArray()" class="btn btn-primary" id="btnBottomLeft">Submit</button>
+  <button onclick="postControlsArray()" class="btn btn-primary" id="btnBottomLeft" data-toggle="tooltip" data-placement="top" title="Coming Soon">Submit</button>
+
+  <script>
+    // Initialize tooltip component
+    $(function () {
+      $('[data-toggle="tooltip"]').tooltip()
+    })
+    
+    // Initialize popover component
+    $(function () {
+      $('[data-toggle="popover"]').popover()
+    })
+    </script>
 </body>
 
 </html>
