--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
           </button>
         </div>
       </div>
+      <img src="img/symbol_default_CMYK_DPI-3.png">
     </nav>
   </header>
   <div class="d-flex align-items-stretch">
